# vector_maths

./: .gitignore  README.md  VectorMaths.sln
.github/workflows/: ci.yml
VectorMaths/: CMakeLists.txt  VectorMaths.vcxproj  VectorMaths.vcxproj.filters
VectorMaths/include/: Collision.hpp  Matrix.hpp  Quaternion.hpp  Transform.hpp  Vector.hpp
VectorMaths/src/: Collision.cpp  Matrix.cpp  Quaternion.cpp  Transform.cpp  Vector.cpp
VectorMaths/tests/: CMakeLists.txt  CollisionTests.cpp  MatrixTests.cpp  QuaternionTests.cpp  VectorTests.cpp
